feat(api): setup validator, models...
