# internal/models/example.go
@@ -1,11 +1,12 @@
 package models
 
-import (
-	"gorm.io/gorm"
-)
-
 type Example struct {
-  gorm.Model `json:"-"`
+  GormModel
   Title       string `json:"title" gorm:"column:title"`
   Description string `json:"description" gorm:"column:description"`
+}
+
+type ExampleCreate struct {
+  Title       string `json:"title" binding:"required" validate:"min=8,max=64"`
+  Description string `json:"description" binding:"required"`
 }
